# amanu

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  check_models.py  config.example.yaml  config.ollama.example.yaml  config.yaml  count_tokens.py  main.py  plugin-system-development-specification.md  processor.py  prompts.py  pyproject.toml  spec_review.md  technical_specification.md  utils.py
amanu/: cli.py  constants.py  file_manager.py  models.py  prompts.py  response_parser.py  results_manager.py  scribe.py  utils.py  watcher.py  wizard.py
amanu/core/: __init__.py  config.py  console.py  factory.py  logger.py  manager.py  models.py  providers.py  reporting.py  templates.py
amanu/pipeline/: __init__.py  base.py  generate.py  ingest.py  prep.py  refine.py  scout.py  scribe.py  shelve.py
amanu/plugins/: base.py  manager.py  markdown.py  pdf.py  srt.py  txt.py
amanu/providers/: base.py  zai.py  (+5 more)
docs/: INDEX.md  adding_new_providers.md  architecture_decisions.md  architecture_report.md  audio-processing-stratagies-gemini.md  configuration.md  dynamic_provider_discovery_plan.md  features.md  folder-architecture.md  getting-started-macos.md  getting-started-windows.md  install_guide.md  openrouter_implementation.md  openrouter_quickstart.md  partial_pipeline_execution.md  pipeline_dependencies.md  template_system_design.md  usage_guide.md
logs/: app.log.2025-11-22
tests/: reproduce_chunking_logic.py  test_openrouter_integration.py  verify_debug_stats.py  verify_ollama.py  verify_ollama_errors.py  verify_openrouter.py  verify_pdf.py
(+50 files in other folders)
