[project]
name = "amanu"
version = "0.1.2"
description = "AI-powered amanuensis for your voice notes. Mp3 to Markdown with structure."
authors = [
    {name = "User", email = "user@example.com"},
]
dependencies = [
    "google-generativeai",
    "pyyaml",
    "watchdog",
]
requires-python = ">=3.10"

[project.scripts]
amanu = "amanu.cli:main"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
